# Group5

./: Group5 project  README.md  cloudflared.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  todo.md  tsconfig.json  vite.config.ts  vite.ext.ts
.cloudflared/: config.yml
src/: App.tsx  helpers.ts  main.css  main.tsx  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/styles/: GlobalStyles.tsx
src/components/: App.tsx
src/components/catalyst/: avatar.tsx  dropdown.tsx  input.tsx  link.tsx  navbar.tsx
src/components/elements/: Header.tsx  Logo.tsx  PageContentBlock.tsx  index.ts
src/components/pages/: Auth.tsx  Home.tsx  NotFound.tsx
src/state/: app.ts  index.ts  user.ts
