[package]
name = "subscription-finance-tracker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-decorations", "window-close", "window-request-user-attention", "window-set-skip-taskbar", "window-set-size", "window-hide", "window-unminimize", "window-set-cursor-visible", "window-center", "window-set-fullscreen", "window-set-focus", "window-maximize", "window-show", "window-set-cursor-grab", "window-unmaximize", "window-minimize", "window-set-cursor-icon", "os-all", "window-start-dragging", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5.0.1"
rusqlite = "0.32.1"
window-shadows = "0.2.2"
window-vibrancy = "0.4.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
